--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,7 +3,28 @@ sensitivity 1.26
 fps_max 400
 fps_max_tools 120
 fps_max_ui 120
-snd_voipvolume 0.11
+snd_voipvolume 0.8
+snd_remove_soundevent Flashbang.Ring.Short;
+snd_remove_soundevent Flashbang.Ring.Long; 
+snd_remove_soundevent Flashbang.Ring.Medium
+
+//Performance Settings
+rate "1000000"
+net_client_steamdatagram_enable_override "1"
+mm_dedicated_search_maxping "60"
+cl_net_buffer_ticks "0"
+engine_no_focus_sleep "0"
+cl_cq_min_queue -1
+cq_min_queue_size 4
+cq_buffer_bloat_msecs 0
+cq_buffer_bloat_msecs_max 0
+fps_max "0"
+fps_max_ui "0"
+engine_low_latency_sleep_after_client_tick "true"    
+cl_crosshair_friendly_warning "0"
+cl_ragdoll_workaround_threshold "0"
+cl_autohelp "0"
+
 
 //Crosshair
 cl_crosshairstyle "4";
@@ -58,10 +79,10 @@ bind "f6" "buy taser 34;"
 //bind "kp_del" "buy tec9; buy fiveseven;"
 //bind "kp_enter" "buy deagle;"
 //bind "kp_slash" "buy flashbang; buy molotov; buy incgrenade; buy hegrenade; buy smokegrenade;"
-bind "uparrow" "buy mp7;"
-bind "leftarrow" "buy mac10; buy mp9;"
-bind "downarrow" "buy ump45;"
-bind "rightarrow" "buy p90;"
+//bind "uparrow" "buy mp7;"
+//bind "leftarrow" "buy mac10; buy mp9;"
+//bind "downarrow" "buy ump45;"
+//bind "rightarrow" "buy p90;"
 
 //-Other Binds
 bind "ALT" "sv_cheats 1; noclip"
@@ -73,6 +94,25 @@ bind x +jump
 bind "MWHEELDOWN" "+jump"
 bind "MWHEELUP" "+jump"
 alias "dc" "disconnect"
+
+//-DemoBinds
+//demos 
+ 
+bind "LEFTARROW" "demo_gototick -320 relative"      // skip back 5 seconds
+ 
+bind "DOWNARROW" "+ffw20"                            // fastfoward 20x speed toggle
+alias "+ffw20" "demo_timescale 20"
+alias "-ffw20" "demo_timescale 1"
+ 
+bind "UPARROW" "+ffw50"                            // fastfoward 50x speed toggle
+alias "+ffw50" "demo_timescale 50"
+alias "-ffw50" "demo_timescale 1"
+ 
+bind "RSHIFT" demo_togglepause                   // toggle pause demo
+ 
+bind "RCTRL" demoui                             // opens demoui
+ 
+bind "RALT" "toggle spec_show_xray"            // toggle xray
 
 //NADEBINDS
 //Cycle Nades:
@@ -86,14 +126,14 @@ bind "V"
 alias +walkchat "+sprint; bind enter messagemode2" 
 alias -walkchat "-sprint; bind enter messagemode" 
 bind shift +walkchat 
-bind rshift +walkchat 
+//bind rshift +walkchat 
 //bind "SHIFT" "+sprint"
 bind enter messagemode
 
 //RUN JUMP THROW
 alias "+wthrow" "+forward;+jump;"
 alias "-wthrow" "-jump;-forward"
-bind "y" "+wthrow; +ja"
+bind "z" "+wthrow; +ja"
 
 
 //KZ Binds
