--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -28,7 +28,7 @@ cl_autohelp "0"
 
 //Crosshair
 cl_crosshairstyle "4";
-cl_crosshaircolor "4";
+cl_crosshaircolor "9";
 cl_crosshairsize "2";
 cl_crosshairgap "-1.3";
 cl_crosshairalpha "200";
@@ -90,28 +90,22 @@ bind "f7" "bot_kick"
 bind "kp_multiply" "voice_enable 0"
 bind "kp_plus" "voice_enable 1"
 bind "kp_minus" "disconnect"
-bind x +jump
+bind "x" "+jump"
 bind "MWHEELDOWN" "+jump"
 bind "MWHEELUP" "+jump"
 alias "dc" "disconnect"
 
 //-DemoBinds
 //demos 
- 
 bind "LEFTARROW" "demo_gototick -320 relative"      // skip back 5 seconds
- 
 bind "DOWNARROW" "+ffw20"                            // fastfoward 20x speed toggle
 alias "+ffw20" "demo_timescale 20"
 alias "-ffw20" "demo_timescale 1"
- 
 bind "UPARROW" "+ffw50"                            // fastfoward 50x speed toggle
 alias "+ffw50" "demo_timescale 50"
 alias "-ffw50" "demo_timescale 1"
- 
 bind "RSHIFT" demo_togglepause                   // toggle pause demo
- 
 bind "RCTRL" demoui                             // opens demoui
- 
 bind "RALT" "toggle spec_show_xray"            // toggle xray
 
 //NADEBINDS
@@ -120,7 +114,7 @@ bind "MOUSE4" "slot4"
 //Flashbang:
 bind "C" "slot7"
 //Smoke:
-bind "V" 
+bind "V" "slot8"
 
 //CHAT
 alias +walkchat "+sprint; bind enter messagemode2" 
@@ -129,12 +123,6 @@ bind shift +walkchat
 //bind rshift +walkchat 
 //bind "SHIFT" "+sprint"
 bind enter messagemode
-
-//RUN JUMP THROW
-alias "+wthrow" "+forward;+jump;"
-alias "-wthrow" "-jump;-forward"
-bind "z" "+wthrow; +ja"
-
 
 //KZ Binds
 //alias +longjump "+duck; +jump; -forward; -back"
@@ -152,40 +140,25 @@ echo ""
 echo ""
 echo ""
 echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo "-------------------------------"
-echo "¦TIURI CS 2 CONFIG LOADED!¦"
-echo "-------------------------------"
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
-echo ""
+echo "
+
+    _____ _            _                                  
+   |_   _(_)          (_)                                 
+     | |  _ _   _ _ __ _                                  
+     | | | | | | | '__| |                                 
+     | | | | |_| | |  | |                                 
+     \_/ |_|\__,_|_|  |_|                                 
+                                                          
+                                                          
+ _____  _____  _____        _____              __ _       
+/  __ \/  ___|/ __  \      /  __ \            / _(_)      
+| /  \/\ `--. `' / /'______| /  \/ ___  _ __ | |_ _  __ _ 
+| |     `--. \  / / |______| |    / _ \| '_ \|  _| |/ _` |
+| \__/\/\__/ /./ /___      | \__/\ (_) | | | | | | | (_| |
+ \____/\____/ \_____/       \____/\___/|_| |_|_| |_|\__, |
+                                                     __/ |
+                                                    |___/ 
+"
 echo ""
 echo ""
 echo ""
