--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -140,25 +140,25 @@ echo ""
 echo ""
 echo ""
 echo ""
-echo "
-
-    _____ _            _                                  
-   |_   _(_)          (_)                                 
-     | |  _ _   _ _ __ _                                  
-     | | | | | | | '__| |                                 
-     | | | | |_| | |  | |                                 
-     \_/ |_|\__,_|_|  |_|                                 
-                                                          
-                                                          
- _____  _____  _____        _____              __ _       
-/  __ \/  ___|/ __  \      /  __ \            / _(_)      
-| /  \/\ `--. `' / /'______| /  \/ ___  _ __ | |_ _  __ _ 
-| |     `--. \  / / |______| |    / _ \| '_ \|  _| |/ _` |
-| \__/\/\__/ /./ /___      | \__/\ (_) | | | | | | | (_| |
- \____/\____/ \_____/       \____/\___/|_| |_|_| |_|\__, |
-                                                     __/ |
-                                                    |___/ 
-"
+echo ""
+echo ""
+echo "    _____ _            _                                  "
+echo "   |_   _(_)          (_)                                 "
+echo "     | |  _ _   _ _ __ _                                  "
+echo "     | | | | | | | '__| |                                 "
+echo "     | | | | |_| | |  | |                                 "
+echo "     \_/ |_|\__,_|_|  |_|                                 "
+echo "                                                          "
+echo "                                                          "
+echo " _____  _____  _____        _____              __ _       "
+echo "/  __ \/  ___|/ __  \      /  __ \            / _(_)      "
+echo "| /  \/\ `--. `' / /'______| /  \/ ___  _ __ | |_ _  __ _ "
+echo "| |     `--. \  / / |______| |    / _ \| '_ \|  _| |/ _` |"
+echo "| \__/\/\__/ /./ /___      | \__/\ (_) | | | | | | | (_| |"
+echo " \____/\____/ \_____/       \____/\___/|_| |_|_| |_|\__, |"
+echo "                                                     __/ |"
+echo "                                                    |___/ "
+echo ""
 echo ""
 echo ""
 echo ""
