--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -47,7 +47,7 @@ bind "i" "show_loadout_toggle"
 bind "m" "teammenu"
 bind "q" "lastinv"
 bind "z" "+spray_menu"
-bind "§" "toggleconsole"
+bind "`" "toggleconsole"
 bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
 bind "PAUSE" "pause"
