--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -22,19 +22,21 @@ cl_autohelp "0"
 
 
 //Crosshair
-cl_crosshairstyle "4";
-cl_crosshaircolor "9";
-cl_crosshairsize "2";
-cl_crosshairgap "-1.3";
-cl_crosshairalpha "200";
-cl_crosshairusealpha "0";
-cl_crosshairthickness "0.6";
-cl_crosshair_drawoutline "1";
-cl_crosshair_outlinethickness "1";
-cl_crosshairdot "0";
-cl_crosshair_t "0";
-cl_crosshairgap_useweaponvalue "0";
-hud_showtargetid "0";
+cl_crosshairalpha "200"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "0"
+cl_crosshaircolor_r "255"
+cl_crosshaircolor_g "176"
+cl_crosshairdot "0"
+cl_crosshairgap "-1.3"
+cl_crosshairsize "2"
+cl_crosshairstyle "4"
+cl_crosshairusealpha "0"
+cl_crosshairthickness "0.6"
+cl_fixedcrosshairgap "-1.3"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_drawoutline "1"
+hud_showtargetid "1";
 
 //Mouse
 m_pitch "0.022"
